--- a/data/shrubberies/archief.yaml
+++ b/data/shrubberies/archief.yaml
@@ -7,6 +7,14 @@ social:
     link: "https://www.youtube.com/channel/UC0jxWRT7rqjoanNfXV3aAQA"
     icon: "youtube"
 shrubberies:
+  - name: "NK Indoor Meerkamp 2022 - Dag 1"
+    link: "https://www.youtube.com/watch?v=mzlMdBQBULg"
+    icon: "youtube"
+    icon_set: "fab"
+  - name: "NK Indoor Meerkamp 2022 - Dag 2"
+    link: "https://www.youtube.com/watch?v=81kAHdmC_j8"
+    icon: "youtube"
+    icon_set: "fab"
   - name: "ASICS NK Atletiek 2021 - 27 juni - Technisch"
     link: "https://www.youtube.com/watch?v=DoITbskljww"
     icon: "youtube"
