--- a/data/shrubberies/archief.yaml
+++ b/data/shrubberies/archief.yaml
@@ -7,12 +7,28 @@ social:
     link: "https://www.youtube.com/channel/UC0jxWRT7rqjoanNfXV3aAQA"
     icon: "youtube"
 shrubberies:
-  - name: "NK Indoor Meerkamp 2022 - Dag 1"
-    link: "https://www.youtube.com/watch?v=mzlMdBQBULg"
+  - name: "ASICS NK Indoor U20 & U18 - Dag 2 - Looponderdelen"
+    link: "https://www.youtube.com/watch?v=dOb8b0CcOtY"
+    icon: "youtube"
+    icon_set: "fab"
+  - name: "ASICS NK Indoor U20 & U18 - Dag 2 - Technische onderdelen"
+    link: "https://www.youtube.com/watch?v=2HW6QcLDhKo"
+    icon: "youtube"
+    icon_set: "fab"
+  - name: "ASICS NK Indoor U20 & U18 - Dag 1 - Looponderdelen"
+    link: "https://www.youtube.com/watch?v=_Dy9JwpceiU"
+    icon: "youtube"
+    icon_set: "fab"
+  - name: "ASICS NK Indoor U20 & U18 - Dag 1 - Technische onderdelen"
+    link: "https://www.youtube.com/watch?v=deZfPiDfXnU"
     icon: "youtube"
     icon_set: "fab"
   - name: "NK Indoor Meerkamp 2022 - Dag 2"
     link: "https://www.youtube.com/watch?v=81kAHdmC_j8"
+    icon: "youtube"
+    icon_set: "fab"
+  - name: "NK Indoor Meerkamp 2022 - Dag 1"
+    link: "https://www.youtube.com/watch?v=mzlMdBQBULg"
     icon: "youtube"
     icon_set: "fab"
   - name: "ASICS NK Atletiek 2021 - 27 juni - Technisch"
