--- a/data/shrubberies/live.yaml
+++ b/data/shrubberies/live.yaml
@@ -7,20 +7,20 @@ social:
     link: "https://www.youtube.com/channel/UC0jxWRT7rqjoanNfXV3aAQA"
     icon: "youtube"
 shrubberies:
-  - name: "ASICS NK Indoor U20 & U18 - Dag 1 - Looponderdelen"
-    link: "https://www.youtube.com/watch?v=_Dy9JwpceiU"
+  - name: "NK Indoor Senioren 2022 - Dag 1 - Looponderdelen"
+    link: "https://www.youtube.com/watch?v=6nva9ysFBXE"
     icon: "youtube"
     icon_set: "fab"
-  - name: "ASICS NK Indoor U20 & U18 - Dag 1 - Technische onderdelen"
-    link: "https://www.youtube.com/watch?v=deZfPiDfXnU"
+  - name: "NK Indoor Senioren 2022 - Dag 1 - Technische onderdelen"
+    link: "https://www.youtube.com/watch?v=xNwhNAPFB0U"
     icon: "youtube"
     icon_set: "fab"
-  - name: "ASICS NK Indoor U20 & U18 - Dag 2 - Looponderdelen"
-    link: "https://www.youtube.com/watch?v=dOb8b0CcOtY"
+  - name: "NK Indoor Senioren 2022 - Dag 2 - Looponderdelen"
+    link: "https://www.youtube.com/watch?v=HsH2OMj5loc"
     icon: "youtube"
     icon_set: "fab"
-  - name: "ASICS NK Indoor U20 & U18 - Dag 2 - Technische onderdelen"
-    link: "https://www.youtube.com/watch?v=2HW6QcLDhKo"
+  - name: "NK Indoor Senioren 2022 - Dag 2 - Technische onderdelen"
+    link: "https://www.youtube.com/watch?v=kxg43YYAxLs"
     icon: "youtube"
     icon_set: "fab"
 
