--- a/data/shrubberies/live.yaml
+++ b/data/shrubberies/live.yaml
@@ -7,20 +7,7 @@ social:
     link: "https://www.youtube.com/channel/UC0jxWRT7rqjoanNfXV3aAQA"
     icon: "youtube"
 shrubberies:
-  - name: "NK Indoor Senioren 2022 - Dag 1 - Looponderdelen"
-    link: "https://www.youtube.com/watch?v=6nva9ysFBXE"
+  - name: "Ter Specke Bokaal 2022"
+    link: "https://youtu.be/wlwfp-ehVbM"
     icon: "youtube"
     icon_set: "fab"
-  - name: "NK Indoor Senioren 2022 - Dag 1 - Technische onderdelen"
-    link: "https://www.youtube.com/watch?v=xNwhNAPFB0U"
-    icon: "youtube"
-    icon_set: "fab"
-  - name: "NK Indoor Senioren 2022 - Dag 2 - Looponderdelen"
-    link: "https://www.youtube.com/watch?v=HsH2OMj5loc"
-    icon: "youtube"
-    icon_set: "fab"
-  - name: "NK Indoor Senioren 2022 - Dag 2 - Technische onderdelen"
-    link: "https://www.youtube.com/watch?v=kxg43YYAxLs"
-    icon: "youtube"
-    icon_set: "fab"
-
