--- a/data/shrubberies/archief.yaml
+++ b/data/shrubberies/archief.yaml
@@ -7,6 +7,14 @@ social:
     link: "https://www.youtube.com/channel/UC0jxWRT7rqjoanNfXV3aAQA"
     icon: "youtube"
 shrubberies:
+  - name: "Next Generation Athletics 2022"
+    link: "https://youtu.be/X_LH8JZ99bo"
+    icon: "youtube"
+    icon_set: "fab"
+  - name: "Ter Specke Bokaal 2022"
+    link: "https://youtu.be/wlwfp-ehVbM"
+    icon: "youtube"
+    icon_set: "fab"
   - name: "NK Indoor Senioren 2022 - Dag 2 - Looponderdelen"
     link: "https://www.youtube.com/watch?v=HsH2OMj5loc"
     icon: "youtube"
