--- a/data/shrubberies/live.yaml
+++ b/data/shrubberies/live.yaml
@@ -7,7 +7,7 @@ social:
     link: "https://www.youtube.com/channel/UC0jxWRT7rqjoanNfXV3aAQA"
     icon: "youtube"
 shrubberies:
-  - name: "Ter Specke Bokaal 2022"
-    link: "https://youtu.be/wlwfp-ehVbM"
+  - name: "Next Generation Athletics 2022"
+    link: "https://youtu.be/X_LH8JZ99bo"
     icon: "youtube"
-    icon_set: "fab"
+    icon_set: "fab""
