--- a/data/shrubberies/live.yaml
+++ b/data/shrubberies/live.yaml
@@ -10,4 +10,4 @@ shrubberies:
   - name: "Next Generation Athletics 2022"
     link: "https://youtu.be/X_LH8JZ99bo"
     icon: "youtube"
-    icon_set: "fab""
+    icon_set: "fab"
