--- a/data/shrubberies/live.yaml
+++ b/data/shrubberies/live.yaml
@@ -7,7 +7,7 @@ social:
     link: "https://www.youtube.com/channel/UC0jxWRT7rqjoanNfXV3aAQA"
     icon: "youtube"
 shrubberies:
-  - name: "Next Generation Athletics 2022"
-    link: "https://youtu.be/X_LH8JZ99bo"
+  - name: "51ste Gouden Spike 2022"
+    link: "https://youtu.be/ZcIzNL1eh9U"
     icon: "youtube"
     icon_set: "fab"
