--- a/data/shrubberies/live.yaml
+++ b/data/shrubberies/live.yaml
@@ -7,7 +7,26 @@ social:
     link: "https://www.youtube.com/channel/UC0jxWRT7rqjoanNfXV3aAQA"
     icon: "youtube"
 shrubberies:
-  - name: "51ste Gouden Spike 2022"
-    link: "https://youtu.be/ZcIzNL1eh9U"
+  - name: "ASICS NK Atletiek 2022 - 24 juni - Lopen"
+    link: "https://youtu.be/XhPYKi4gqwY"
+    icon: "youtube"
+    icon_set: "fab"
+  - name: "ASICS NK Atletiek 2022 - 24 juni - Technisch"
+    link: "https://youtu.be/2TGrHFVrYyQ"
+    icon: "youtube"
+  - name: "ASICS NK Atletiek 2022 - 25 juni - Lopen"
+    link: "https://youtu.be/2kAsGSE3UQI"
+    icon: "youtube"
+    icon_set: "fab"  
+  - name: "ASICS NK Atletiek 2022 - 25 juni - Technisch"
+    link: "https://youtu.be/fntcRG5Zdmw"
+    icon: "youtube"
+    icon_set: "fab"
+  - name: "ASICS NK Atletiek 2022 - 26 juni - Lopen"
+    link: "https://youtu.be/Y0MnsffqAOo"
+    icon: "youtube"
+    icon_set: "fab"
+  - name: "ASICS NK Atletiek 2022 - 26 juni - Technisch"
+    link: "https://youtu.be/fk5H9HT6hG0"
     icon: "youtube"
     icon_set: "fab"
