--- a/data/shrubberies/archief.yaml
+++ b/data/shrubberies/archief.yaml
@@ -7,6 +7,21 @@ social:
     link: "https://www.youtube.com/channel/UC0jxWRT7rqjoanNfXV3aAQA"
     icon: "youtube"
 shrubberies:
+  - name: "ASICS NK Atletiek 2022 - 24 juni - Lopen"
+    link: "https://youtu.be/XhPYKi4gqwY"
+    icon: "youtube"
+    icon_set: "fab"
+  - name: "ASICS NK Atletiek 2022 - 24 juni - Technisch"
+    link: "https://youtu.be/2TGrHFVrYyQ"
+    icon: "youtube"
+  - name: "ASICS NK Atletiek 2022 - 25 juni - Lopen"
+    link: "https://youtu.be/2kAsGSE3UQI"
+    icon: "youtube"
+    icon_set: "fab"  
+  - name: "ASICS NK Atletiek 2022 - 25 juni - Technisch"
+    link: "https://youtu.be/fntcRG5Zdmw"
+    icon: "youtube"
+    icon_set: "fab"
   - name: "51ste Gouden Spike 2022"
     link: "https://youtu.be/ZcIzNL1eh9U"
     icon: "youtube"
