--- a/data/shrubberies/archief.yaml
+++ b/data/shrubberies/archief.yaml
@@ -4,9 +4,13 @@ description: ""
 avatar: "/images/avatar.jpg"
 social:
   - name: "Youtube Atletiekunie"
-    link: "https://www.youtube.com/channel/UC0jxWRT7rqjoanNfXV3aAQA"
+    link: "https://www.youtube.com/@AtletiekunieTV"
     icon: "youtube"
 shrubberies:
+  - name: "Klaverblad International High Jump Meeting"
+    link: "https://youtu.be/6uSGbmIBcWQ"
+    icon: "youtube"
+    icon_set: "fab"
   - name: "ASICS NK Atletiek 2022 - 26 juni - Lopen"
     link: "https://youtu.be/Y0MnsffqAOo"
     icon: "youtube"
