--- a/data/shrubberies/live.yaml
+++ b/data/shrubberies/live.yaml
@@ -4,14 +4,10 @@ description: ""
 avatar: "/images/avatar.jpg"
 social:
   - name: "Youtube Atletiekunie"
-    link: "https://www.youtube.com/channel/UC0jxWRT7rqjoanNfXV3aAQA"
+    link: "https://www.youtube.com/@AtletiekunieTV"
     icon: "youtube"
 shrubberies:
-  - name: "ASICS NK Atletiek 2022 - 26 juni - Lopen"
-    link: "https://youtu.be/Y0MnsffqAOo"
-    icon: "youtube"
-    icon_set: "fab"
-  - name: "ASICS NK Atletiek 2022 - 26 juni - Technisch"
-    link: "https://youtu.be/fk5H9HT6hG0"
+  - name: "NK Indoor 2023 - Meerkamp"
+    link: ""
     icon: "youtube"
     icon_set: "fab"
