--- a/config.toml
+++ b/config.toml
@@ -8,9 +8,11 @@ disableKinds = ["taxonomy", "term"]
   name = "Atletiekunie.tv"
   image = "logo-au.jpg"
   links = [
-        {youtube = { href = "https://www.youtube.com/watch?v=JyKSN30uEBQ", text = "ASICS NK Atletiek 2023 - 28 juli"} },
-        {youtube = { href = "https://www.youtube.com/watch?v=OvBj3yNGM2U", text = "ASICS NK Atletiek 2023 - 29 juli"} },
-        {youtube = { href = "https://www.youtube.com/watch?v=tPMty43FoWs", text = "ASICS NK Atletiek 2023 - 30 juli"} },
+        {youtube = { href = "https://www.youtube.com/watch?v=mawVR6yAkgU", text = "NK Indoor Meerkamp 2024 - 4 februari"} },
+        {youtube = { href = "https://www.youtube.com/watch?v=uS2VZDn9Geo", text = "ASICS NK Indoor U20/U18 2024 - 10 februari"} },
+        {youtube = { href = "https://www.youtube.com/watch?v=bgR5Q0zFvjA", text = "ASICS NK Indoor U20/U18 2024 - 11 februari"} },
+        {youtube = { href = "https://www.youtube.com/watch?v=bAKt-cxOzgk", text = "NK Indoor 2024 - 17 februari"} },
+        {youtube = { href = "https://www.youtube.com/watch?v=boCGc0sM6tw", text = "NK Indoor 2024 - 18 februari"} },
         {youtube = { href = "https://www.youtube.com/@AtletiekunieTV/streams", text = "AtletiekunieTV Archief"} },
   ]
 
