Add workflow (by Terraform)

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -7,12 +7,16 @@ updates:
   - package-ecosystem: "github-actions"
     directory: "/"
     schedule:
-      day: "sunday"
+      day: "wednesday"
       interval: "weekly"
       time: "04:54"
+    assignees:
+      - "durandguru"
   - package-ecosystem: "terraform"
     directory: "/"
     schedule:
-      day: "sunday"
+      day: "thursday"
       interval: "weekly"
       time: "05:54"
+    assignees:
+      - "durandguru"
