--- a/config.toml
+++ b/config.toml
@@ -8,7 +8,10 @@ disableKinds = ["taxonomy", "term"]
   name = "Atletiekunie.tv"
   image = "logo-au.jpg"
   links = [
-        {youtube = { href = "https://www.youtube.com/watch?v=93nyBufQEco&", text = "NK Indoor Meerkamp - 9 februari"} },
+        {youtube = { href = "https://youtube.com/live/ikopdCvEWnc", text = "ASICS NK Indoor U20 & U18 - dag 1 - 15 februari"} },
+        {youtube = { href = "https://youtube.com/live/4rSt5oibd8I", text = "ASICS NK Indoor U20 & U18 - dag 2 - 16 februari"} },
+        {youtube = { href = "https://youtube.com/live/UILTGSIf8xo", text = "ASICS NK Indoor Senioren - dag 1 - 22 februari"} },
+        {youtube = { href = "https://youtube.com/live/6IC-S29Nh_E", text = "ASICS NK Indoor Senioren - dag 2 - 23 februari"} },
         {youtube = { href = "https://www.youtube.com/@AtletiekunieTV/streams", text = "AtletiekunieTV Archief"} },
   ]
 
