--- a/config.toml
+++ b/config.toml
@@ -8,8 +8,8 @@ disableKinds = ["taxonomy", "term"]
   name = "Atletiekunie.tv"
   image = "logo-au.jpg"
   links = [
-        {youtube = { href = "https://youtube.com/live/-vIWFYytdNA", text = "Next Generation Athletics 2025"} },
-        {youtube = { href = "https://youtube.com/live/t2OrOOZop7g", text = "Next Generation Athletics 2025 - Geen Commentaar"} },
+        {youtube = { href = "https://youtube.com/live/tSHru2VOxWE", text = "Gouden Spike 2025"} },
+        {youtube = { href = "https://youtube.com/live/z3Rdke6_Icg", text = "Gouden Spike 2025 - Geen Commentaar"} },
         {youtube = { href = "https://www.youtube.com/@AtletiekunieTV/streams", text = "AtletiekunieTV Archief"} },
   ]
 
